update publishing, mods for jdk21